--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -17,7 +17,7 @@
     <img src="http://2018.igem.org/wiki/images/8/8b/T--GO_Paris-Saclay--gold.png" class="wideimg">
   </div>
 
-  <h1>Integrated Human Practices</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Integrated Human Practices</h1>   </div>
   <p>
     At the beginning of our project, two members of our team wanted to work on endocrine disruptor in wastewater
     treatment. However, several survey and research made on the subject indicated us that there were already plenty of
@@ -48,20 +48,20 @@
     which the synthetic pathways of interest behave as parasitic systems and are associated to fitness-cost.
   </p>
 
-  <h1>Model</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Model</h1>   </div>
   <p>Advanced models were created and used to get insight into the core of the project, and the degradation of the MTX.
     More precisely, we modelize the case in which the degradation of anticancer drugs and the biotransformation pathways
     themselves are toxic. Modeling an heterogeneous expression of the synthetic pathway within the ‘cleaning factory’
     population highlights the interest of a division of labor between “cleaning” and “stem” bacterial cells.
   </p>
-  <h1>Demonstrate our project work</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Demonstrate our project work</h1>   </div>
   <p>We designed synthetic cassettes encoding a new biotransformation pathway using an heterologous carboxypeptidase in
     <i>Escherichia coli</i>. In only 5 h, our ‘cleaning factory’ drastically removes MTX from the media. During our project we
     demonstrated that the level of MTX after getting through our E. coli population, dropped from 512 µM to close to 0,
     proving that our degrading system is efficient.
   </p>
-  <h1>Improvement of an existing biobrick</h1>
-  <p>During the part of our part concerning the ‘heterogenious’ expression system, we initially wanted to express ler
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Improvement of an existing biobrick</h1>   </div>
+  <p>During the part of our part concerning the ‘heterogenious’ expression system, we initially wanted to express <i>ler</i>
     genes at different levels. Therefore we had interest in the large and very well characterized <a href="http://parts.igem.org/Promoters/Catalog/Anderson">Anderson promoter
       collection</a>. Four promoters from this collection were available in
     pSB1C3 backbone vector in the Distribution Kit 2018 (<a href="http://parts.igem.org/Part:BBa_J23119">BBa_J23119</a> ; <a href="http://parts.igem.org/Part:BBa_J23108">BBa_J23108</a> ;
@@ -74,7 +74,7 @@
     <img src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--silver.png" class="wideimg">
   </div>
 
-  <h1>Validated Part</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Validated Part</h1>   </div>
   <p>We match all deliverables requirements and submitted 13 Biobricks (see Table).</p>
 
   <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp halfwidetable centerstuff">
@@ -253,7 +253,7 @@
     </tbody>
   </table>
 
-  <h1>Collaborations</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Collaborations</h1>   </div>
   <p>
   We have significantly worked with 3 other registered iGEM team (IGEM Grenoble Alpes 2018, iGEM Sorbonne University
     team, Dusseldorf iGEM team) in a perfect symbiosis. For more informations, go check out our <a (click)="this.router.navigate(['/collaborations'], { fragment: 'top'})">collaboration</a> page.</p>
@@ -271,7 +271,7 @@
   <p>
 
   <!--
-  <h1>Human Practices</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Human Practices</h1>   </div>
   Survey Study Meeting with an environmental lawyer
   Interview
   Drawing book
@@ -282,19 +282,19 @@
   </div>
 
 
-  <h1>Register and attend</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Register and attend</h1>   </div>
   <p>We successfully registered for iGEM and had an amazing time, and will attend the Giant Jamboree</p>
 
-  <h1>Deliverables</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Deliverables</h1>   </div>
   <p>We created our wiki, documented our entire project and our future aspirations</p>
   <p>Our Poster and presentation are ready to be presented at the Giant Jamboree</p>
   <p>The judging form as well as the safety form were filled up as soon as they were available.</p>
   <p>We created, documented and registered all of our part in the registry page</p>
   <p>We submitted all of our part’s DNA samples.</p>
-  <h1>Attribution</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Attribution</h1>   </div>
   <p>We are grateful for all the help we have received, to see the wonderful people who helped us, check out our
     <a (click)="this.router.navigate(['/attribution'], { fragment: 'top'})">attribution</a> page</p>
-  <h1>Contributions</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Contributions</h1>   </div>
   <p>We conduct and realised the interlab measurement study, you can see our result in the <a (click)="this.router.navigate(['/biology', 'interlab'], { fragment: 'top'})">interlab</a> Page</p>
 
   <p class="spacemaker"></p>
