--- a/src/app/attribution/attribution.component.html
+++ b/src/app/attribution/attribution.component.html
@@ -21,7 +21,7 @@
   </p>
   <p class="spacemaker"></p>
 
-  <h1>Advisors and Researcher</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Advisors and Researcher</h1>   </div>
 
   <div class="personcontainer">
     <div class="sideportrait">
@@ -128,7 +128,7 @@
   </div>
   <p class="spacemaker"></p>
 
-  <h1>Team Member</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Team Member</h1>   </div>
 
   <h2>BRIAND William</h2>
   <p>Clear presentation, he showed us the 3 simple steps of the MTX degradation. William spent 1 month in the lab trying
