--- a/src/app/collaborations/collaborations.component.html
+++ b/src/app/collaborations/collaborations.component.html
@@ -12,9 +12,10 @@
   <p style="margin-bottom: 1em;">
     During this 2018 edition, we made fruitful connections with many teams :
   </p>
-  <h1>Sorbonne University team</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Sorbonne University team</h1>   </div>
   <img class="pmeetup" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--sorbonne_collab.jpg">
-  <p><a href="http://2018.igem.org/Team:Sorbonne_U_Paris/Collaborations">iGEM Sorbonne University</a>/IGEM GO Paris_Saclay is probably the best example of what a real collaboration is. Because our
+  <p><a href="http://2018.igem.org/Team:Sorbonne_U_Paris/Collaborations">iGEM Sorbonne University</a>/IGEM GO
+    Paris_Saclay is probably the best example of what a real collaboration is. Because our
     team lacked programmers and designers, they proposed to help us with the coding part of IGEM (which really helped us
     in
     creating our wiki), and with the sketching process of our new logo.</p>
@@ -24,19 +25,21 @@
   </p>
   <p class="spacemaker"></p>
 
-  <h1>Grenoble team</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Grenoble team</h1>   </div>
   <img src="http://2018.igem.org/wiki/images/b/ba/T--GO_Paris-Saclay--grenoble_collab.jpg" class="pmeetup">
   <p>
-    In collaboration with the <a href="http://2018.igem.org/Team:Grenoble-Alpes/Collaborations">IGEM Grenoble Alpes </a> team we created the: “Take a famous painting and throw some biology in it
+    In collaboration with the <a href="http://2018.igem.org/Team:Grenoble-Alpes/Collaborations">IGEM Grenoble Alpes </a>
+    team we created the: “Take a famous painting and throw some biology in it
     challenge”. Pictures were posted on social media, the one with the most “likes” wins the competition. A very fun
     challenge indeed, a nice break from the lab during the summer.
   </p>
   <p class="spacemaker"></p>
 
-  <h1>Dusseldorf team</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Dusseldorf team</h1>   </div>
   <img src="http://2018.igem.org/wiki/images/0/00/T--GO_Paris-Saclay--collab_postcard.png" class="pmeetup">
   <p>
-    We collaborated with <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM steam</a> and we participating team designs a postcard which shows an image related
+    We collaborated with <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM steam</a> and we
+    participating team designs a postcard which shows an image related
     to synthetic biology (or your topic) on the front and a small informational text on the back. Afterwards each team’s
     postcards are exchanged with other iGEM-teams so that every team can collect postcards from all over the world. The
     received postcards can then be shared with people in the neighbourhood, during public events and so on. We chose to
@@ -46,7 +49,7 @@
   <p class="spacemaker"></p>
 
 
-  <h1>Sorbonne and Bordeaux university team</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Sorbonne and Bordeaux university team</h1>   </div>
   <img src="http://2018.igem.org/wiki/images/a/a3/T--GO_Paris-Saclay--collabsorbbord.png" class="pmeetup"
        style="width: 70%;">
   <p>
@@ -56,17 +59,44 @@
     to our audience. We hope this collaboration between our 3 team will last in time, in the IGEM competition.
   </p>
 
-  <h1>Evry team</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Louvain University team</h1>   </div>
+  <img src="http://2018.igem.org/wiki/images/c/c9/T--GO_Paris-Saclay--UCL_collab.png" class="pmeetup">
+  <p>
+    In the early phase of the competition we welcomed Celestin from UCL Louvain iGem team at Paris for an entire day.
+    More than just a meeting, it It was the perfect time to discuss, and obtain a fresh look on the foundation of our
+    respective team’s project.
+  </p>
+  <p>
+    We helped each other on several aspects of the contest such as the human practices and modelling. Our 2 teams would
+    had neglected about some iGEM mandatory elements without this meetings.
+
+  </p>
+
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Evry team</h1>   </div>
   <img src="http://2018.igem.org/wiki/images/9/9a/T--GO_Paris-Saclay--evryretraite.png" class="pmeetup"
        style="width: 70%;">
   <p>
+    With Adèle Mazelin and Esteban Lebrun from the Evry Paris Saclay team, we came up with a vulgarization activity in
+    senior residence for the science festival, a national scientific group of events.
+  </p><p>
+    In France, there is a trend to see a negative opinion about GMO especially among the senior population. During this
+    day we firstly evaluate bacterial and synthetic biology knowledge of the audience. Surprisingly most of them were
+    familiar with fact that bacteria are ubiquitous, and even with the microbiote notion.
+</p><p>
+    However as usual, synthetic biology and GMO production were seen as an negative “technology” made by agribusiness
+    for their own profit. With that reaction in mind, we took the time at the end of the talk to enlight all the issue
+    synthetic biology can or as already resolved (with somes examples such as insulin production).
+</p><p>
+    It was a truly inspiring moment to hear that we changed their opinion against GMO and hope that one day EU laws
+    would be more adapted to this interesting field.
+
   </p>
 
 
   <p class="spacemaker"></p>
   <p>These collaboration would not have been the same without the meetups we attended :</p>
 
-  <h1>European meetup with the iGEM community</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>European meetup with the iGEM community</h1>   </div>
 
   <div>
     <img class="emeetupimgtall" src="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--european_meetup_1.jpg">
@@ -93,7 +123,7 @@
 
   <div class="spacemaker"></div>
 
-  <h1>Parisian meetup</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Parisian meetup</h1>   </div>
   <p>The Parisian meetup was the first time we presented our project to all the French teams: Bordeaux, Toulouse,
     Pasteur,
     Evry, Grenoble and Sorbonne University. They gave us some amazing feedback about our project and lots of compliments
@@ -103,6 +133,7 @@
   <img class="pmeetup" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--parisian_meetup.jpg">
 
   <div class="spacemaker"></div>
+
 
 
 </mat-card>
