--- a/src/app/computing-section/computing-section.component.html
+++ b/src/app/computing-section/computing-section.component.html
@@ -7,7 +7,7 @@
 </div>
 
   <mat-card class="dashboard-card largemargin">
-    <h1>Plasmid Sketcher at a glimpse</h1>
+    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Plasmid Sketcher at a glimpse</h1>   </div>
 
     <p>
       Plasmid Sketcher is a <b>web-based software to draw plasmid map</b>.
@@ -43,7 +43,7 @@
            class="screenshot">
     </p>
 
-    <h1>Inspiration for Plasmid Sketcher</h1>
+    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Inspiration for Plasmid Sketcher</h1>   </div>
     <p>
       Visual communication has long been recognised as an integral part of biology, especially in bacteriology, cell
       biology
@@ -135,7 +135,7 @@
       biology, a high-level view is often valuable. Thus we wanted to offer a usable solution fulfilling the second
       identified goal.
     </p>
-    <h1>About the software</h1>
+    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>About the software</h1>   </div>
     <p class="textparagraph">
 
       Following the recognized user persona method <reference-box shorthand="Cooper2007"></reference-box>, the interface was designed
