--- a/src/app/computing-section/wikisourcesheet.html
+++ b/src/app/computing-section/wikisourcesheet.html
@@ -10,7 +10,7 @@ export class Reference {
   public tags: string[];
 }
 -->
-<h1>Our wiki's source code</h1>
+<div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Our wiki's source code</h1>   </div>
 <p>You can get the wiki sources here : <a  target="_blank" href="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--igem2018-wikisource_angularwiki.zip" mat-raised-button><mat-icon>open_in_new</mat-icon> Download source zip</a>
 </p>
 <p>This wiki uses Angular with some special magic to work on a wiki infrastructure. <br>You will need node.js, npm and Angular CLI to use this source.<br>
