--- a/src/app/demonstrate/demonstrate.component.html
+++ b/src/app/demonstrate/demonstrate.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <mat-card class="dashboard-card largemargin">
-  <h1>MethotrExit: a HeteroGenious Cleaning Factory</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>MethotrExit: a HeteroGenious Cleaning Factory</h1>   </div>
 
   <p class="withlettrine">
     Cytotoxic anticancer drugs are among harmful chemicals found in hospital wastewater at high concentration. Physical
@@ -23,7 +23,7 @@
     subpopulation. Modeling of this system highlights the interest of a division of labor between ‘cleaning’ and ‘stem’
     bacterial cells.
   </p>
-  <h1>The choice of a ‘Cleaning Factory’ chassis</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>The choice of a ‘Cleaning Factory’ chassis</h1>   </div>
 
   <p>
     After analysing the MTX-sensitivity of several <i>Escherichia coli</i> K12 WT and efflux pump mutants, we
@@ -41,7 +41,7 @@
       <div class="captionmaterialmethod"> LB medium containing MTX (512 µM) was incubated during 5 h at 37°C with
         control
         bacteria [E. coli K12 pSB1C3-tet (BBa_R0040)] or with one of our ‘MTX Cleaning Factory’ [E. coli WT
-        pSB1C3-folC-cpg2
+        pSB1C3-<i>folC</i>-<i>cpg2</i>
         (BBa_K2688009)]. The supernatants were filtrated and analysed by HPLC with a reverse phase C18 column. Detection
         was made using UV spectrophotometry at 303 nm.
       </div>
@@ -54,7 +54,7 @@
   </mat-card>
 
 
-  <h1>Design of the MTX biotransformation pathway</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Design of the MTX biotransformation pathway</h1>   </div>
 
   <p>
     We focused our attention on two enzymes, <i>Pseudomonas</i> carboxypeptidase G2 (CPG2 or ‘glucarpidase’) and a
@@ -62,12 +62,12 @@
   metabolites glutamate and DAMPA (2,4-diamino-N10-methylpteroic acid)<reference-box shorthand="Widemann2000"></reference-box><reference-box shorthand="Larimer2014"></reference-box>.
     We also tested the interest of co-expressing FolC that may enhance MTX catabolism by coupling
   MTX to polyglutamate<reference-box shorthand="Chabner1985"></reference-box><reference-box shorthand="Kwon2008"></reference-box>.
-    The biotransformation of MTX was monitored by HPLC analysis and bioassays using <i>E. coli</i> K12 Δ<i>acrA1</i> mutant as an
+    The biotransformation of MTX was monitored by HPLC analysis and bioassays using <i>E. coli</i> K12 Δ<i>acrA</i> mutant as an
   indicative strain. In only 5 h of incubation with our ‘Cleaning Factories’, MTX was nearly completely removed from LB
   medium (Figure 1.B).
   </p>
 
-  <h1>Toward the ‘HeteroGenious Cleaning Factory’</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Toward the ‘HeteroGenious Cleaning Factory’</h1>   </div>
 
   <p>We observed that the chassis strains harboring both <i>cpg2</i> and <i>folC</i> expression cassettes present a slight growth delay.
   Indeed, drug degradation pathways may be associated with a fitness cost. Therefore we wanted our bioreactor to harbor
@@ -78,7 +78,7 @@
   population highlights the interest of a division of labor between ‘cleaning’ and ‘stem-like’ bacterial cells.
   </p>
 
-  <h1>Conclusion</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Conclusion</h1>   </div>
   <p>
     We obtained <i>E. coli</i> strains that efficiently remove MTX from culture medium, and a two-part device that can generate
   heterogeneity of transgene expression within a bacterial population. This study opens new insight concerning the
