--- a/src/app/support-section/support-section.component.html
+++ b/src/app/support-section/support-section.component.html
@@ -49,6 +49,8 @@
 <br><br>
     We thank Marie Claude Serre from the I2BC lab. She alone, gave us tons of material we needed for our experimentation. Without her the Summer lab would not have been the same !
 <br><br>
+    The design made by Anaëlle Mens (green MethotrExit) and Mathias Demongeot were truly amazing.
+    <br><br>
     A big thank to Herve Leh, Research Engineer at the I2BC who gave us plenty of tips at the beginning of the lab time, and supervised us during the summer !
 <br><br>
   </mat-card>
