--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -1,14 +1,16 @@
 <div class="bannercontainer">
-  <img src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--team_underbanner.png" class="bannerimg superposedbanner1">
-  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <img src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--team_underbanner.png"
+       class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
+       class="bannerimg superposedbanner2">
   <div class="headlinetext">Our&nbsp;Team</div>
 </div>
-
+<!--
 
   <mat-card class="dashboard-card">
     <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center">
       <mat-card *ngFor="let member of membersList" fxFlex="0 1 100%" class="member-card">
-        <div class="cardcontent" [@cardState]="member.expanded">
+        <div class="cardcontent">
           <img  src="{{member.image_src}}" class="memberimg">
 
           <div class="member-name">
@@ -21,4 +23,347 @@
       </mat-card>
     </div>
   </mat-card>
+
+-->
+
+
+<figure id="figure4">
+  <p><img src="http://2018.igem.org/wiki/images/f/f4/T--GO_Paris-Saclay--diveremp.png"
+          alt="tableauinterlab">
+  </p>
+</figure>
+
+<figure id="figure5">
+  <p><img src="http://2018.igem.org/wiki/images/e/e1/T--GO_Paris-Saclay--advisorsousmarin.png"
+          alt="tableauinterlab">
+  </p>
+</figure>
+
+<div id="raph"><a href="#raphl"><img src="http://2018.igem.org/wiki/images/a/ac/T--GO_Paris-Saclay--raphaelguegan.png"
+                                     alt="logoparissaclay"></a></div>
+
+<div id="rapht">
+  Raphael
+</div>
+
+
+<div id="atu"><a href="#atul"><img src="http://2018.igem.org/wiki/images/8/88/T--GO_Paris-Saclay--arthurr.png"
+                                   alt="logoparissaclay"></a></div>
+<div id="atut">
+  Arthur
+</div>
+
+<div id="brit"><a href="#britl"><img src="http://2018.igem.org/wiki/images/b/bb/T--GO_Paris-Saclay--britanym.png"
+                                     alt="logoparissaclay"></a></div>
+
+<div id="britt">
+  Britany
+</div>
+
+<div id="clem"><a href="#clemt"><img src="http://2018.igem.org/wiki/images/c/c0/T--GO_Paris-Saclay--clema.png"
+                                     alt="logoparissaclay"></a></div>
+
+<div id="clemt">
+  Clémence
+</div>
+
+<div id="guig"><a href="#guigl"><img src="http://2018.igem.org/wiki/images/c/cb/T--GO_Paris-Saclay--guig.png"
+                                     alt="logoparissaclay"></a></div>
+
+<div id="guigt">
+  Guillaume
+</div>
+
+
+<div id="jm"><a href="#jml"><img src="http://2018.igem.org/wiki/images/d/d0/T--GO_Paris-Saclay--jm.png"
+                                 alt="logoparissaclay"></a></div>
+
+<div id="jmt">
+  Julie M.
+</div>
+
+
+<div id="jr"><a href="#jrl"><img src="http://2018.igem.org/wiki/images/1/1f/T--GO_Paris-Saclay--jr.png"
+                                 alt="logoparissaclay"></a></div>
+
+<div id="jrt">
+  Julie R.
+</div>
+
+<div id="ke"><a href="#kel"><img src="http://2018.igem.org/wiki/images/8/89/T--GO_Paris-Saclay--ke.png"
+                                 alt="logoparissaclay"></a></div>
+
+<div id="ket">
+  Kenn
+</div>
+
+<div id="ous"><a href="#ousl"><img src="http://2018.igem.org/wiki/images/5/5d/T--GO_Paris-Saclay--ous.png"
+                                   alt="logoparissaclay"></a></div>
+
+<div id="oust">
+  Ousmane
+</div>
+
+
+<div id="arn"><a href="#"><img src="http://2018.igem.org/wiki/images/c/c1/T--GO_Paris-Saclay--arn.png"
+                               alt="logoparissaclay"></a></div>
+
+<div id="arnt">
+  Arnaud
+</div>
+
+<div id="cel"><a href="#cell"><img src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--cel.png"
+                                   alt="logoparissaclay"></a></div>
+
+<div id="celt">
+  Céline
+</div>
+
+<div id="mah"><a href="#mahl"><img src="http://2018.igem.org/wiki/images/d/d5/T--GO_Paris-Saclay--mah.png"
+                                   alt="logoparissaclay"></a></div>
+
+<div id="maht">
+  Mahnaz
+</div>
+<div id="oli"><a href="#olil"><img src="http://2018.igem.org/wiki/images/8/80/T--GO_Paris-Saclay--oli.png"
+                                   alt="logoparissaclay"></a></div>
+
+<div id="olit">
+  Olivier
+</div>
+
+<div id="phil"><a href="#phill"><img src="http://2018.igem.org/wiki/images/b/b9/T--GO_Paris-Saclay--phil.png"
+                                     alt="logoparissaclay"></a></div>
+
+<div id="philt">
+  Philipe
+</div>
+
+
+<div id="ste"><a href="#stel"><img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--steph.png"
+                                   alt="logoparissaclay"></a></div>
+
+<div id="stet">
+  Stéphanie
+</div>
+
+<div id="syl"><a href="#syll"><img src="http://2018.igem.org/wiki/images/f/ff/T--GO_Paris-Saclay--syl.png"
+                                   alt="logoparissaclay"></a></div>
+
+<div id="sylt">
+  Sylvie
+</div>
+
+
+<div>
+  <img id="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png"
+       alt="carretitreprinci">
+  <h1 id="titreh1" style="padding-top: 10px;">Team member</h1>
+</div>
+
+
+
+<div id="photdescr"><img id="raphl" src="http://2018.igem.org/wiki/images/a/ac/T--GO_Paris-Saclay--raphaelguegan.png"
+                         alt="logoparissaclay"></div>
+
+
+<div class="textphot">
+
+  Raphaël Gueguan
+  <br>
+
+  Age: 23<br>
+
+  Very mathy person.
+
+</div>
+
+<div id="photdescr"><img id="atul" src="http://2018.igem.org/wiki/images/8/88/T--GO_Paris-Saclay--arthurr.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Arthur Radoux
+  <br/>
+
+  Age: 23 <br/>
+
+  Handsome lad.
+</div>
+
+<div id="photdescr"><img id="britl" src="http://2018.igem.org/wiki/images/b/bb/T--GO_Paris-Saclay--britanym.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Britany Marta
+  <br/>
+
+  Age: 22<br/>
+
+  Queen of bacteria !
+</div>
+
+<div id="photdescr"><img src="http://2018.igem.org/wiki/images/c/c0/T--GO_Paris-Saclay--clema.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Clémence Maupu
+  <br/>
+
+  Age: 22<br/>
+
+  Did not break anything.
+</div>
+
+<div id="photdescr"><img id="guigl" src="http://2018.igem.org/wiki/images/c/cb/T--GO_Paris-Saclay--guig.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Guillaume Garnier
+  <br/>
+
+  Age: 23<br/>
+
+  Sometime, a philosoph.
+</div>
+
+<div id="photdescr"><img id="jml" src="http://2018.igem.org/wiki/images/d/d0/T--GO_Paris-Saclay--jm.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Julie Miesch
+  <br/>
+
+  Age: 22<br/>
+
+  We like her.
+</div>
+
+<div id="photdescr"><img id="jrl" src="http://2018.igem.org/wiki/images/1/1f/T--GO_Paris-Saclay--jr.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Julie Rojahn
+  <br/>
+
+  Age: 23<br/>
+
+  Excellence.
+</div>
+
+<div id="photdescr"><img id="kel" src="http://2018.igem.org/wiki/images/8/89/T--GO_Paris-Saclay--ke.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Kenn Papadopoulo
+  <br/>
+
+  Age: 22<br/>
+
+  All work no play. Also, windsurf.
+</div>
+
+<div id="photdescr"><img id="yueying" src="http://2018.igem.org/wiki/images/f/f2/T--GO_Paris-Saclay--yueying.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphot">
+  Yueying Zhu
+  <br/>
+
+  Age: 22<br/>
+
+  Efficient !
+</div>
+
+<div class="ousm">
+  <div id="photdescr"><img id="ousl" src="http://2018.igem.org/wiki/images/5/5d/T--GO_Paris-Saclay--ous.png"
+                           alt="logoparissaclay"></div>
+
+  <div class="textphotousm">
+    Ousmane Dao
+    <br/>
+
+    Age: 21<br/>
+
+    Dedicated.
+  </div>
+</div>
+
+<div>
+  <img id="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png"
+       alt="carretitreprinci">
+
+  <h1 style="padding-top:10px;padding-left: 10px" id="titreh1">Advisors</h1>
+</div>
+
+
+<div id="photdescr"><img id="cell" src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--cel.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphotadv">
+  Céline Aubry
+  <br/>
+
+  We broke her glass cell spreader. Sorry !
+</div>
+
+
+<div>
+  <div id="photdescr"><img id="mahl" src="http://2018.igem.org/wiki/images/d/d5/T--GO_Paris-Saclay--mah.png"
+                           alt="logoparissaclay"></div>
+
+  <div class="textphotadv">
+    Mahnaz Sabeti Azad
+    <br/>
+
+    A breeze of fresh air.
+  </div>
+</div>
+
+<div id="photdescr"><img id="olil" src="http://2018.igem.org/wiki/images/8/80/T--GO_Paris-Saclay--oli.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphotadv">
+  Olivier Namy
+  <br/>
+
+  Tempered our expectations.
+</div>
+
+<div id="photdescr"><img id="phill" src="http://2018.igem.org/wiki/images/b/b9/T--GO_Paris-Saclay--phil.png"
+                         alt="logoparissaclay"></div>
+
+<div class="textphotadv">
+  Philippe Bouloc
+  <br/>
+
+  Phage master.
+</div>
+
+
+<div id="photdescr"><img id="stel" src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--steph.png"
+                         alt="logoparissaclay">
+</div>
+
+<div class="textphotadv">
+  Stéphanie Bory-Moné
+  <br/>
+
+  Leading.
+</div>
+
+<div class="ousm2">
+
+  <div id="photdescr"><img id="stel" src="http://2018.igem.org/wiki/images/f/ff/T--GO_Paris-Saclay--syl.png"
+                           alt="logoparissaclay"></div>
+
+  <div class="textphotousm">
+    Sylvie Lautru
+    <br/>
+
+    Organized our work.
+  </div>
+</div>
+
+<p class="spacemaker"></p>
+
 
