--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,13 @@
 
   <router-outlet></router-outlet>
 
-  <img *ngIf="showBackHomeLogo" src="http://2018.igem.org/wiki/images/5/5b/T--GO_Paris-Saclay--footerespace.png" class="superposedbanner1">
+  <div style="width: 100%;">
+    <div style="width:80px;margin: auto auto;"><a href="https://www.facebook.com/iGEMParisSaclay/"><img src="http://2018.igem.org/wiki/images/d/d6/T--GO_Paris-Saclay--facebook.png" class="smalllogofb centerstuff"></a>
+      <a href="https://twitter.com/igemparissaclay?lang=en"><img src="http://2018.igem.org/wiki/images/e/e8/T--GO_Paris-Saclay--twitter.png" class="smalllogofb centerstuff"></a>
+    </div>
+  </div>
+
+  <img *ngIf="showBackHomeLogo" src="http://2018.igem.org/wiki/images/3/37/T--GO_Paris-Saclay--footer_small.png" class="superposedbanner1">
 
 </div> <!-------------fin container------------->
 
