--- a/src/app/team-roster/team-roster.component.css
+++ b/src/app/team-roster/team-roster.component.css
@@ -63,3 +63,434 @@
   float: left;
   margin-right: 20px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#gcontainer{
+  margin: 20px;
+
+}
+
+.dashboard-card-content {
+  text-align: left;
+}
+
+.dashboard-card {
+  overflow: auto;
+}
+
+.grid-container {
+  margin: 20px;
+}
+
+.member-name {
+  font-weight: bold;
+  font-size: 1.5em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+
+.member-bio {
+  font-size : 11pt;
+  margin-top : 2em;
+
+}
+
+.member-card {
+  margin: 0.2em 0.2em 0.2em 0.2em;
+  /* max-width: 240px; */
+  width: 240px;
+}
+
+.seemorebutton-container {
+
+
+}
+
+.seemorebutton {
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  min-height: 20px;
+  vertical-align: top;
+  font-size: 10px;
+  padding: 0 0;
+  margin: 0;
+}
+
+.additional-info {
+  margin-top : 1em;
+  font-size : 11pt;
+}
+
+.cardcontent {
+}
+
+.memberimg  {
+  width: 200px;
+  float: left;
+  margin-right: 20px;
+}
+
+
+
+@font-face {
+  font-family:"Latoregular";
+  src: url("http://2018.igem.org/wiki/images/9/94/T--Sorbonne_U_Paris--lato-regular.ttf") format('truetype');}
+
+h1, h2, h3, h4,h5,h6,p, u, li, a{
+  font-family: "Latoregular";
+}
+#raph
+{
+  width: 150px;
+  position: absolute;
+  top: 810px;
+  right: 220px;
+}
+
+#photdescr
+{
+  width: 200px;
+  margin-left: 50px;
+  margin-top: 100px;
+}
+
+#photdescrous
+{
+  width: 200px;
+  margin-left: 50px;
+  margin-top: 100px;
+  margin-bottom: 200px;
+}
+
+#rapht
+{
+  position: absolute;
+  top: 990px;
+  right: 240px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#atu
+{
+  width: 150px;
+  position: absolute;
+  top: 1070px;
+  right: 190px;
+}
+#atut
+{
+  position: absolute;
+  top: 1255px;
+  right: 220px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+#clem
+{
+  width: 150px;
+  position: absolute;
+  top: 910px;
+  left: 80px;
+}
+#clemt
+{
+  position: absolute;
+  top: 1090px;
+  left: 90px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#brit
+{
+  width: 150px;
+  position: absolute;
+  top: 1160px;
+  left: 100px;
+}
+#britt
+{
+  position: absolute;
+  top: 1345px;
+  left: 130px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#guig
+{
+  width: 150px;
+  position: absolute;
+  top: 1360px;
+  left: 200px;
+}
+#guigt
+{
+  position: absolute;
+  top: 1545px;
+  left: 205px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+#jm
+{
+  width: 150px;
+  position: absolute;
+  top: 720px;
+  right: 470px;
+}
+
+#jmt
+{
+  position: absolute;
+  top: 900px;
+  right: 470px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+#jr
+{
+  width: 150px;
+  position: absolute;
+  top: 1600px;
+  left: 600px;
+}
+#jrt
+{
+  position: absolute;
+  top: 1780px;
+  left: 635px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#ke
+{
+  width: 150px;
+  position: absolute;
+  top: 750px;
+  left: 250px;
+}
+#ket
+{
+  position: absolute;
+  top: 935px;
+  left: 292px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+#ous
+{
+  width: 150px;
+  position: absolute;
+  top: 1560px;
+  left: 310px;
+}
+#oust
+{
+  position: absolute;
+  top: 1740px;
+  left: 325px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#cel
+{
+  width: 150px;
+  position: absolute;
+  top: 2160px;
+  left: 190px;
+}
+
+#celt
+{
+  position: absolute;
+  top: 2340px;
+  left: 220px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#mah
+{
+  width: 150px;
+  position: absolute;
+  top: 2020px;
+  left: 560px;
+}
+#maht
+{
+  position: absolute;
+  top: 2195px;
+  left: 600px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#oli
+{
+  width: 150px;
+  position: absolute;
+  top: 2720px;
+  left: 530px;
+}
+#olit
+{
+  position: absolute;
+  top: 2900px;
+  left: 560px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#phil
+{
+  width: 150px;
+  position: absolute;
+  top: 2400px;
+  left: 90px;
+}
+#philt
+{
+  position: absolute;
+  top: 2580px;
+  left: 120px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#ste
+{
+  width: 150px;
+  position: absolute;
+  top: 2600px;
+  left: 190px;
+}
+#stet
+{
+  position: absolute;
+  top: 2780px;
+  left: 200px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#syl
+{
+  width: 150px;
+  position: absolute;
+  top: 2600px;
+  right: 190px;
+}
+#sylt
+{
+  position: absolute;
+  top: 2783px;
+  right: 218px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#arn
+{
+  width: 150px;
+  position: absolute;
+  top: 2100px;
+  right: 160px;
+}
+#arnt
+{
+  position: absolute;
+  top: 2280px;
+  right: 180px;
+  color: white;
+  font-size: 30px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+p
+{
+  font-size: 1.2em;
+  text-align: justify;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+.textphot
+{
+  margin-left: 300px;
+  margin-top: -130px;
+  width: 700px;
+  font-size: 1.2em;
+  text-align: justify;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+.textphotadv {
+  margin-left: 300px;
+  margin-top: -120px;
+  width: 700px;
+  font-size: 1.2em;
+  text-align: justify;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+
+.textphotousm
+{
+  margin-left: 300px;
+  margin-top: -140px;
+  margin-bottom: 100px;
+  width: 700px;
+  font-size: 1.2em;
+  text-align: justify;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+.ousm
+{
+  margin-bottom: 200px;
+}
+
+.ousm2
+{
+  margin-bottom: 400px;
+}
+
+#figure4 {
+  margin-top: 90px;
+}
+
+#figure5 {
+  margin-top: -10px;
+}
