--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -255,10 +255,24 @@ ng-list-item .mat-divider {
 h1 {
   @extend .mat-headline;
   font-size: 28pt;
-  width: 105%;
   margin-bottom: 0.5em;
-  margin-top: 1.3em;
   font-weight: bolder;
+  text-transform: capitalize;
+  color:rgb(42,183,202);
+  margin-top: 50px;
+  margin-left: 180px;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+.carretitrepincipal
+{
+  width: 150px;
+  float:left;
+}
+
+.titrebloc {
+  margin-left: -120px;
+  overflow: auto;
 }
 
 h2 {
@@ -326,6 +340,7 @@ a {
 .captionafterapicture {
   font-size : 11pt;
   color: grey;
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 
 .captionmaterialmethod {
@@ -346,6 +361,8 @@ a {
 p {
   font-size: 14pt;
   font-family: 'Lato', Helvetica, SansSerif;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 
@@ -380,6 +397,7 @@ p {
 .dashboard-card {
   overflow: auto;
   text-align: left;
+  box-shadow: 0px 0px !important;
 }
 
 .largemargin {
@@ -391,6 +409,18 @@ p {
 .headlinetext {
   position: absolute;
   top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-family: 'Didact Gothic', Helvetica, SansSerif;
+  font-weight: bolder;
+  font-size: 50pt;
+  text-shadow: 2px 2px black;
+}
+
+.headlinetextbottom {
+  position: absolute;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -420,6 +450,14 @@ p {
   font-family: 'Source Code Pro', monospace;
 }
 
+.mat-card {
+
+}
+
+.smalllogofb {
+  width: 40px;
+
+}
 
 
 
